refactor: refactor shouldRaiseIfOpponentsRequestTrucoAndIveGotZapAndWinFirstRound test to use mock