@@ -512,12 +512,10 @@ public class PatoBotTest {
     @Test
     @DisplayName("Should raise if opponents request 'Truco' and I've got 'Zap' and win the first round")
     public void shouldRaiseIfOpponentsRequestTrucoAndIveGotZapAndWinFirstRound() {
-        TrucoCard card1 = TrucoCard.of(CardRank.FIVE, CardSuit.CLUBS);
-        TrucoCard card2 = TrucoCard.of(CardRank.SEVEN, CardSuit.CLUBS);
-        TrucoCard vira = TrucoCard.of(CardRank.FOUR, CardSuit.DIAMONDS);
-        when(intel.getRoundResults()).thenReturn(List.of(GameIntel.RoundResult.WON));
-        when(intel.getCards()).thenReturn(Arrays.asList(card1, card2));
-        when(intel.getVira()).thenReturn(vira);
+        card1 = TrucoCard.of(CardRank.FIVE, CardSuit.CLUBS);
+        card2 = TrucoCard.of(CardRank.SEVEN, CardSuit.CLUBS);
+        vira = TrucoCard.of(CardRank.FOUR, CardSuit.DIAMONDS);
+        setupCardsViraAndRoundResult(Arrays.asList(card1, card2, card3), vira, List.of(GameIntel.RoundResult.WON));
         assertThat(patoBot.getRaiseResponse(intel)).isEqualTo(1);
     }
 
